fix: fix overflow on columns

--- a/project-management-app/src/app/project-board/components/column/column.component.scss
+++ b/project-management-app/src/app/project-board/components/column/column.component.scss
@@ -6,7 +6,6 @@
   width: 300px;
   min-height: 600px;
   max-height: 600px;
-  overflow: auto;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   background-color: $color-grey-lighter;
   border-radius: 8px;
@@ -16,7 +15,8 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    padding: 0 15px;  
+    padding: 10px 15px;
+    overflow: auto;
   }
 
   &__line {
@@ -29,7 +29,7 @@
 .title {
   display: flex;
   align-items: center;
-  justify-content: space-between; 
+  justify-content: space-between;
   gap: 10px;
   min-height: 60px;
   padding: 15px 5px 10px 10px;
